# Copper-Particle-Positioning-Grinding-System

./: .gitignore  AGENTS.md  README.md  README_CN.md  pyproject.toml  requirements.txt  run_app.bat  tmp_block.txt  tmp_qml.txt  ui_settings.ini
TestData/images/: MzPoliShine.km
app/: config.py  main.py
app/api/: __init__.py  endpoints.py  launcher.py  run_api.py  run_api.py.bak  server.py  service.py
app/bootstrap/: runtime.py
app/core/: comm.py  events.py  interlocks.py  recipes.py  state_machine.py
app/data/: providers.py
app/db/: __init__.py  base.py  models.py
app/devices/: camera_base.py  io_base.py  motion_base.py  spindle_base.py
app/diagnostics/: logging.py
app/domain/: __init__.py
app/motion/: planner.py
app/process/: gcode_export.py  orchestrator.py  path_planning.py
app/server/: CONFIG.py  launcher.py  run_api.py
app/ui/: CMakeLists.txt  README_cpp.md  app.rc  config.json  highlighter.py  image_provider.py  main.cpp  main.py  main.qml  pyproject.toml  qml.qrc  qml.rcc  qml_bridge.py  rc_qml.py  rc_src.py  resource.qrc  resource.rcc  settings_bridge.py  src.qrc  src.rcc
app/ui/Api/: ApiClient.qml  Http.js
app/ui/cpp/: main.cpp
app/ui/qml/: App_Base.qml  RBT.qml  main.qml  minimal.qml
app/ui/qml/Api/: Ajax.qml  ApiClient.qml  Http.js  Urls.qml  qmldir
app/ui/qml/Sockets/: CodeSocket.qml  CuttingSocket.qml  LogsSocket.qml  Sockets.qml  SocketsManage.qml  StatusSocket.qml  qmldir
app/ui/qml/action/: Shortcuts.qml
app/ui/qml/components/: EditorPanel.qml  MainLayouts.qml  StatusPanel.qml  TopBar.qml  VideoView.qml
app/ui/qml/components/Base/: ApiThreadGet.qml  ApplicationWindowBase.qml  BaseButton.qml  BaseImage.qml  BorderView.qml  CheckDelegateBase.qml  ComboBoxBase.qml  DateTime.qml  DropShadowBase.qml  DropShadowRectangle.qml  EfRectangle.qml  EffectImage.qml  EffectLabel.qml  FillItem.qml  FlickableBase.qml  FlickableVBase.qml  FontInfo.qml  IconBase.qml  ItemDelegateBase.qml  LayoutFIten.qml  ListViewBase.qml  MenuBase.qml  MenuItemBase.qml  NCEnum.qml  NowDate.qml  PaneBase.qml  PopTitleHead.qml  PopupBase.qml  RMouseArea.qml  RadioDelegateBase.qml  ReOrderItem.qml  Rectangle_ItemDelegate.qml  RowLayoutBase.qml  ScrollBarBase.qml  SelectItem.qml  SelectRectangle.qml  SettingsBase.qml  SliderBase.qml  SpinBoxBase.qml  SplitView_.qml  (+3 more)
app/ui/qml/components/Base/Delegates/: ReHeightItem.qml  ReOrderDelegate.qml  ReOrderItem.qml  ReOrderResizeDelegate.qml  ReWidthItem.qml  Test.qml
app/ui/qml/components/Card/: CardHead.qml
app/ui/qml/components/btns/: ActionButton.qml  AddButton.qml  AiBtn.qml  BtnBase.qml  CheckBoxBase.qml  CheckDelegateBase.qml  CloseBtn.qml  CloseBtnForm.ui.qml  ColorImageButton.qml  ColorItemDelegateButtonBase.qml  ExplorerButton.qml  EyeButton.qml  FlushButton.qml  ImageButton.qml  ItemDelegateBase.qml  ItemDelegateButtonBase.qml  LabelButton.qml  MoreSet.qml  NextBtn.qml  PingButton.qml  PlayButton.qml  PreBtn.qml  RemoteControlButton.qml  SettingsButton.qml  SwitchButton.qml  TextButton.qml  WindowModelChangeButton.qml
app/ui/qml/cores/: Core.qml  CoreControl.qml  CoreError.qml  CoreModels.qml  CoreSettings.qml  CoreState.qml  CoreStyle.qml  CoreTimer.qml  CoreUI.qml  qmldir
app/ui/qml/datas/: CodeDatas.qml  CuttingDatas.qml  DeviceInfoData.qml  LogDatas.qml  StatusDatas.qml  qmldir
app/ui/qml/dialogs/: EstopDialog.qml  GlobErrorDialog.qml  TestImagesDialog.qml
app/ui/qml/menu/: SettingsDrawer.qml
app/ui/qml/menu/settings/: SettingPage.qml  SettingPageHead.qml  SettingPageTitle.qml  SettingSectionList.qml
app/ui/qml/pages/: MainLayouts.qml
app/ui/qml/pages/foot/: FootView.qml  PingLabel.qml  ViewMangeRow.qml
app/ui/qml/pages/head/: DateTimeView.qml  EstopBtn.qml  HeadView.qml  IconLabel.qml  IconView.qml  ItemIcon.qml  RunModelSelect.qml  TitleLabel.qml  ViewChangeTabView.qml
app/ui/qml/pages/main/: MainPages.qml
app/ui/qml/pages/main/real_page/: RealPageView.qml
app/ui/qml/pages/main/test_page/: TestPageView.qml
app/ui/qml/shortcuts/: ShortcutManager.qml
app/ui/qml/test/: TestWindow.qml
app/ui/qml/views/: CommPanel.qml  EditorPanel.qml  MainLayouts.qml  MotionPanel.qml  SafetyPanel.qml  StatusPanel.qml  VideoView.qml
app/ui/qml/views/Base/: BaseCard.qml  BaseHead.qml
app/ui/qml/views/Charts/: ElevationAreaChart.qml  LineChart.qml  RpmChart.qml  TorqueChart.qml
app/ui/qml/views/Code/: CodeContorl.qml  CodeFoot.qml  CodeView.qml
app/ui/qml/views/Control/: PTZControl.qml
app/ui/qml/views/DriveInfo/: DeviceMsgView.qml  DriveInfoView.qml  InfoRowItem.qml  InfoTitleLabel.qml  InfoValueLabel.qml  RunStateInfoView.qml  ToolInfoView.qml
app/ui/qml/views/DriveInfo/head/: InfoHeadView.qml
app/ui/qml/views/ImageInfo/: ImageInfoView.qml
app/ui/qml/views/ImageInfo/head/: ViewChiose.qml  ViewChioseItem.qml  ViewHead.qml
app/ui/qml/views/ImageInfo/view2d/: View2D.qml
app/ui/qml/views/Infos/: InfosView.qml
app/ui/qml/views/Infos/head/: FilterMenu.qml  InfoHeadView.qml
app/ui/qml/views/Manage/: CodeManageView.qml  InfoManageView.qml  InfoViewCore.qml
app/ui/qml/views/Manage/head/: FilterMenu.qml  InfoHeadView.qml
app/ui/qml/views/RunTimeView/: RunTimeView.qml
app/ui/qml/views/log/: LogHead.qml  LogView.qml
app/ui/qml/works/: CodeWork.qml  CuttingWork.qml  DeviceInfoWork.qml  LogsWork.qml  StatusWork.qml  Works.qml  qmldir
app/ui/resource/font/: LoadFont.qml
app/ui/src/: __init__.py  highlighter.py  image_provider.py  qml_bridge.py  settings_bridge.py
app/vision/: calibration.py  detector.py  pipeline.py
configs/: example_recipe.yaml  job_default.yaml  machine.yaml  settings_descriptions.yaml
cpp/qml_runner/: CMakeLists.txt
cpp/qml_runner/src/: main.cpp
database/: test.db
docs/: MzPoliShine.km  MzPoliShine.md  铜粒子定位磨削系统软件开发文档.docx
scripts/: build_rcc.ps1  export_docs.ps1  export_docs.py  export_lzpp_from_log.py  extract_topics.py  package_api.ps1  package_ui.ps1  setup_test_images.py  smoke_api.py
tests/: conftest.py  test_api_http.py  test_ws_logs.py  test_ws_logs_reset.py  test_ws_status.py  ws_logs_demo.py
测试文件/: README.md
(+86 files in other folders)
