[project]
name = "Copper-Particle-Positioning-Grinding-System"

[tool.pyside6-project]
files = [
            "config.json",
            "main.py",
            "qml/Api/ApiClient.qml",
            "qml/Api/Http.js",
            "qml/App_Base.qml",
            "qml/Sockets/SocketsManage.qml",
            "qml/components/EditorPanel.qml",
            "qml/components/MainLayouts.qml",
            "qml/components/StatusPanel.qml",
            "qml/components/TopBar.qml",
            "qml/components/VideoView.qml",
            "qml/cores/Core.qml",
            "qml/cores/CoreError.qml",
            "qml/cores/CoreModels.qml",
            "qml/cores/CoreSettings.qml",
            "qml/cores/CoreTimer.qml",
            "qml/dialogs/GlobErrorDialog.qml",
            "qml/dialogs/TestImagesDialog.qml",
            "qml/main.qml",
            "qml/minimal.qml",
            "qml/views/CommPanel.qml",
            "qml/views/MotionPanel.qml",
            "qml/views/SafetyPanel.qml",
            "qtquickcontrols2.conf",
            "src/highlighter.py",
            "src/image_provider.py",
            "src/qml_bridge.py",
            "src/settings_bridge.py",
]
